[gd_scene load_steps=3 format=3 uid="uid://i48tabjyt08t"]

[ext_resource type="Script" path="res://Scenes/ItemShop.gd" id="1_ed3xk"]
[ext_resource type="PackedScene" uid="uid://btqmnmpytpfkq" path="res://Scenes/UI/Item.tscn" id="2_3qixg"]

[node name="ItemShop" type="CanvasLayer" groups=["Items"]]
script = ExtResource("1_ed3xk")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="MoneyLabel" type="Label" parent="Control/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Money:"

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="MainMenuButton" type="Button" parent="Control/MarginContainer/HBoxContainer2"]
layout_mode = 2
text = "Main Menu"

[node name="FightSceneButton" type="Button" parent="Control/MarginContainer/HBoxContainer2"]
layout_mode = 2
text = "Fight Scene"

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/MarginContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 4

[node name="Item1" parent="Control/MarginContainer/HBoxContainer3" instance=ExtResource("2_3qixg")]
offset = Vector2(-400, 0)
transform = Transform2D(1, 0, 0, 1, -400, 0)

[node name="Label" parent="Control/MarginContainer/HBoxContainer3/Item1/Control/MarginContainer/VBoxContainer/HBoxContainer" index="1"]
text = "Price: 100"

[node name="Node" parent="Control/MarginContainer/HBoxContainer3/Item1/Control/MarginContainer/VBoxContainer/HBoxContainer" index="3"]
metadata/ID = 123

[node name="Item2" parent="Control/MarginContainer/HBoxContainer3" instance=ExtResource("2_3qixg")]
offset = Vector2(-250, 0)
transform = Transform2D(1, 0, 0, 1, -250, 0)

[node name="Node" parent="Control/MarginContainer/HBoxContainer3/Item2/Control/MarginContainer/VBoxContainer/HBoxContainer" index="3"]
metadata/ID = 345

[connection signal="pressed" from="Control/MarginContainer/HBoxContainer2/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/HBoxContainer2/FightSceneButton" to="." method="_on_fight_scene_button_pressed"]
[connection signal="bought_item" from="Control/MarginContainer/HBoxContainer3/Item1" to="." method="bought_item"]
[connection signal="bought_item" from="Control/MarginContainer/HBoxContainer3/Item2" to="." method="bought_item"]

[editable path="Control/MarginContainer/HBoxContainer3/Item1"]
[editable path="Control/MarginContainer/HBoxContainer3/Item2"]
